--- a/Sen.html
+++ b/Sen.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <h1><a href="https://www.ghibli.jp" target="_blank">Studio Ghibli</a></h1>
-  <h2><a href="movie.html">movie</a></h2>
+  <h2><a href="index.html">movie</a></h2>
   <li><a href="Sen.html"><strong>The Spiriting Away Of Sen And Chihiro</strong></a></li>
   <li><a href="howl.html"><strong>Howl's Moving Castle</strong></a></li>
   <li><a href="mo.html"><strong>The Princess Mononoke</strong></a></li>
