--- a/howl.html
+++ b/howl.html
@@ -12,13 +12,70 @@
 </script>
   <title>welcome to sumin's web</title>
   <meta charset="utf-8">
+  <style>
+  <title>welcome to sumin's web</title>
+  <meta charset="utf-8">
+  <style>
+  a{
+    color:pink;
+    text-decoration:none;
+  }
+  #grid{
+    display:grid;
+    grid-template-columns: 400px 1fr;
+  }
+  h1{
+    text-align: center;
+    border-bottom:2px solid #BECDFF;
+    padding: 8px; /*상자사이의 간격만들기*/
+    margin: 2px; /*상자바깥에 간격만들기*/
+  }
+  #grid h3{
+    padding-left:15px;
+    padding-right:0px;
+    margin-right: 0px;
+    margin-bottom:0px;
+    margin-top:0px;
+    border-right: 2px solid #BECDFF;
+  }
+  #article{
+    padding: 0px;
+    padding-left: 20px;
+    color:#696969;
+  }
+  h2{
+    padding-left:20px;
+    width:378px;
+    border-right: 2px solid #BECDFF;
+    margin:0px;
+  }
+  body{
+    margin:0px;
+  }
+  span {
+      color:#BECDFF;
+      font-size:20px;
+  }
+  a{
+    color:pink;
+    text-decoration:none;
+  }
+  h3{
+    color:pink;
+  }
+  </style>
 </head>
 <body>
-  <h1><a href="https://www.ghibli.jp" target="_blank">Studio Ghibli</a></h1>
-  <h2><a href="index.html">movie</a></h2>
-  <li><a href="Sen.html"><strong>The Spiriting Away Of Sen And Chihiro</strong></a></li>
-  <li><a href="howl.html"><strong>Howl's Moving Castle</strong></a></li>
-  <li><a href="mo.html"><strong>The Princess Mononoke</strong></a></li>
+  <h1><a href="https://www.ghibli.jp" target="_blank" title="지브리 스튜디오">Studio Ghibli</a></h1>
+  <h2><a href="index.html" title="영화">movie</a></h2>
+  <div id="grid">
+    <h3>
+     <li><a href="Sen.html" ><strong>The Spiriting Away Of Sen And Chihiro</strong></a></li>
+     <li><a href="howl.html" style="color:lightskyblue"><strong>Howl's Moving Castle</strong></a></li>
+     <li><a href="mo.html"><strong>The Princess Mononoke</strong></a></li>
+   </h3>
+  <div id="article">
+    <span><strong>Howl's Moving Castle (Japanese: ハウルの動く城, Hepburn: Hauru no Ugoku Shiro)</strong></span>
   <P><strong>Howl's Moving Castle (Japanese: ハウルの動く城, Hepburn: Hauru no Ugoku Shiro)</strong> is a 2004 Japanese animated fantasy film written and directed by
     Hayao Miyazaki. The film is loosely based on the 1986 novel of the same name by British author Diana Wynne Jones. The film was produced by Toshio
     Suzuki, animated by Studio Ghibli and distributed by Toho. The Japanese voice cast featured Chieko Baisho and Takuya Kimura, while the English dub
@@ -31,7 +88,7 @@
       that he "had a great deal of rage" about the Iraq war, which led him to make a film which he felt would be poorly received in the US.
       It also explores the theme of old age, depicting age positively as something which grants the protagonist freedom. The film contains feminist
       elements as well, and carries messages about the value of compassion.</p>
-        <img src="howl.jpg" width="50%">
+        <img src="howl.jpg" width="98%">
 
  <p> In 2013, Miyazaki said the film was his favorite creation, explaining "I wanted to convey the message that life is worth living,
   and I don't think that's changed."[6] The movie is thematically significantly different from the book; while the book focuses on challenging class
@@ -41,7 +98,8 @@
   The film received critical acclaim, particularly for its visuals and Miyazaki's presentation of the themes. It was nominated for the Academy Award for
   Best Animated Feature at the 78th Academy Awards, but lost to Wallace & Gromit: The Curse of the Were-Rabbit, in 2006, and won several other awards,
   including four Tokyo Anime Awards and a Nebula Award for Best Script.</p>
-  <img src="howl005.jpg" width="50%">
-
+  <img src="howl005.jpg" width="98%">
+</div>
+</div>
 </body>
 </html>
