--- a/Sen.html
+++ b/Sen.html
@@ -92,8 +92,8 @@
         and is in the top 10 on the British Film Institute's list of "Top 50 films for children up to the age of 14". In 2016, it was voted the 4th-best film
         of the 21st century by the BBC, as picked by 177 film critics from around the world, making it the highest-ranking animated film on the list. In 2017,
         it was also named the second "Best Film...of the 21st Century So Far" by The New York Times.</p>
-        <img src="sen1.gif" width="49%">
-        <iframe width="49%" height="305px" src="https://www.youtube.com/embed/i-Regv99RlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <img src="sen1.gif" width="49%" height="15%">
+        <iframe width="49%" height="15%" src="https://www.youtube.com/embed/i-Regv99RlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 </div>
 </body>
