--- a/Sen.html
+++ b/Sen.html
@@ -56,6 +56,19 @@
       color:#BECDFF;
       font-size:19px;
   }
+  @media(max-width:800px){
+    #grid{
+      display:block;
+    }
+    h2{
+      padding-bottom: 10px;
+      border-right:none;
+    }
+    #grid h3{
+      border-right: none;
+      padding-bottom: 20px;
+    }
+  }
   </style>
 </head>
 <body>
