--- a/howl.html
+++ b/howl.html
@@ -63,6 +63,19 @@
   h3{
     color:pink;
   }
+  @media(max-width:800px){
+    #grid{
+      display:block;
+    }
+    h2{
+      padding-bottom: 10px;
+      border-right:none;
+    }
+    #grid h3{
+      border-right: none;
+      padding-bottom: 20px;
+    }
+  }
   </style>
 </head>
 <body>
