day button && night button
주간모드 야간모드 버튼 추가

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
   </style>
 </head>
 <body>
+  <input type="button" value="day" onclick="
+  document.querySelector('body').style.backgroundColor='white';
+  document.querySelector('body').sytle.color='black';
+  ">
+  <input type="button" value="night" onclick="
+  document.querySelector('body').style.backgroundColor='black';
+  document.querySelector('body').sytle.color='white';
+  ">
   <h1><a href="https://www.ghibli.jp" target="_blank" title="지브리 스튜디오" style="color:#6495ED;text-decoration:none">Studio Ghibli</a></h1>
   <h2><a href="index.html"style="color:lightskyblue" title="영화" class="saw">movie</a></h2>
 <div id="grid">
