--- a/Sen.html
+++ b/Sen.html
@@ -72,6 +72,14 @@
   </style>
 </head>
 <body>
+  <input type="button" value="day" onclick="
+  document.querySelector('body').style.backgroundColor='white';
+  document.querySelector('body').sytle.color='black';
+  ">
+  <input type="button" value="night" onclick="
+  document.querySelector('body').style.backgroundColor='black';
+  document.querySelector('body').sytle.color='white';
+  ">
   <h1><a href="https://www.ghibli.jp" target="_blank" title="지브리 스튜디오">Studio Ghibli</a></h1>
   <h2><a href="index.html" title="영화">movie</a></h2>
   <div id="grid">
