--- a/Sen.html
+++ b/Sen.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="color:#696969">
   <input id="night_day" type="button" value="night" onclick="
     var target = document.querySelector('body');
     if(this.value === 'night'){
