--- a/mo.html
+++ b/mo.html
@@ -14,7 +14,8 @@
   <meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 </head>
-<body>  <input id="night_day" type="button" value="night" onclick="
+<body style="color:#696969">
+   <input id="night_day" type="button" value="night" onclick="
     var target = document.querySelector('body');
     if(this.value === 'night'){
       target.style.backgroundColor = 'black';
