--- a/mo.html
+++ b/mo.html
@@ -15,21 +15,28 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body style="color:#696969">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="colors.js"> </script>
- <input id="night_day" type="button" value="night" onclick="
- nightDayHandler(this);
- ">
+   <input id="night_day" type="button" value="night" onclick="
+    var target = document.querySelector('body');
+    if(this.value === 'night'){
+      target.style.backgroundColor = 'black';
+      target.style.color = 'white';
+      this.value = 'day';
+    } else {
+      target.style.backgroundColor = 'white';
+      target.style.color = '#696969';
+      this.value = 'night';
+    }
+  ">
   <h1><a href="https://www.ghibli.jp" target="_blank" title="지브리 스튜디오">Studio Ghibli</a></h1>
   <h2><a href="index.html" title="영화">movie</a></h2>
   <div id="grid">
 <h3>
-  <li><a href="Sen.html" title="센과 치히로의 행방불명">The Spiriting Away Of Sen And Chihiro</a></li>
-  <li><a href="howl.html" title="하울의 움직이는 성">Howl's Moving Castle</a></li>
-  <li><a href="mo.html" style="color:lightskyblue" title="모노노케 히메">The Princess Mononoke</a></li>
+  <li><a href="Sen.html" title="센과 치히로의 행방불명"><strong>The Spiriting Away Of Sen And Chihiro</strong></a></li>
+  <li><a href="howl.html" title="하울의 움직이는 성"><strong>Howl's Moving Castle</strong></a></li>
+  <li><a href="mo.html" style="color:lightskyblue" title="모노노케 히메"><strong>The Princess Mononoke</strong></a></li>
 </h3>
 <div id="article">
-  <span>Princess Mononoke (Japanese: もののけ姫, Hepburn: Mononoke-hime)</span>
+  <span><strong>Princess Mononoke (Japanese: もののけ姫, Hepburn: Mononoke-hime)</strong></span>
   <P><strong>Princess Mononoke (Japanese: もののけ姫, Hepburn: Mononoke-hime)</strong> is a 1997 Japanese epic fantasy film written and directed by Hayao Miyazaki,
     animated by Studio Ghibli for Tokuma Shoten, Nippon Television Network and Dentsu, and distributed by Toho. The film stars the voices of Yōji Matsuda,
     Yuriko Ishida, Yūko Tanaka, Kaoru Kobayashi, Masahiko Nishimura, Tsunehiko Kamijo, Akihiro Miwa, Mitsuko Mori and Hisaya Morishige.
